--- a/README
+++ b/README
@@ -4,12 +4,17 @@ BUILD INSTRUCTIONS
 Ubuntu Linux
 ------------
 
-CMake version 2.8 or higher is required. Unfortunately (as of January 3, 2010)
-Ubuntu's default CMake is still at 2.6.x, so you'll have to build it yourself.
+CMake version 2.8 or higher is required.
 
 You can install other build dependencies with:
 
+  Ubuntu:
+
   sudo apt-get install flex bison libreadline-dev
+
+  Fedora:
+
+  sudo yum install flex bison readline-devel
 
 To build libcpu:
 
